# selfcar

./: README.md  exp1.txt  exp2.txt
Euclidean_Clustering/: CMakeLists.txt  README.md
Euclidean_Clustering/include/: Perception.h
Euclidean_Clustering/selfcar_lib/: CMakeLists.txt  package.xml  trigonometric.h
Euclidean_Clustering/selfcar_lib/include/selfcar_lib/: erp42.h  kalman_filter.h  navsat_conversions.h  navsat_transform.h  serial_connect.h  transform.h  trigonometric.h
Euclidean_Clustering/selfcar_lib/src/: erp42.cpp  kalman_filter.cpp
Euclidean_Clustering/src/: Perception.cpp  main.cpp
localizer/: CMakeLists.txt  package.xml
localizer/include/localizer/: covariance.h  localizer.h
localizer/launch/: localizer.launch
localizer/map/: ochang_grid.yaml
localizer/src/: localizer.cpp  localizer_node.cpp
robot_localization/: CMakeLists.txt
vectornav/src/: main.cpp
